# pathfinding-showcase

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.txt
proto/: pathfinding.proto  pathfinding_connection.proto  pathfinding_node.proto  pathfinding_path.proto
src/: CMakeLists.txt  listener.cpp  listener.h  main.cpp  session.cpp  session.h
ui/: CMakeLists.txt  main.js  package-lock.json  package.json
ui/static/: index.html
